--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,14 @@ body{
 .list {
   list-style: none;
 }
+.logo-link:hover, .logo-link:focus{
+  color: var(--accent-color);
+}
 
-.logo-link:hover, .logo-header:hover{
+.logo-header:hover, .logo-footer:hover{
   color: var(--nav-color);
 }
-.logo-link:focus, .logo-header:focus{
-  color: var(--nav-color); 
-}
+
 .logo-link{
   color: var(--nav-color);
   font-family: "Raleway";
@@ -46,24 +47,21 @@ body{
 .site-nav .link:hover, .site-nav .link:focus{
   color: var(--nav-color);
 }
-.email, .tel{
+.contakts{
   color: var(--main-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   text-decoration: none;
 }
-.email:hover, .email:focus{
+.contakts:hover, .contakts:focus{
   color: var(--nav-color);
 }
 
-.tel:hover, .tel:focus{
-  color: var(--nav-color);
-}
 .hero{
   background-color: #2F303A;
 }
-.hero .hero-title{
+.hero-title{
   color: var(--accent-color);
   text-align: center;
   margin: 0 auto;
@@ -72,13 +70,9 @@ body{
   line-height:1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  width: 696px;
-  height: 120px;
-  left: 452px;
-  top: 280px;
 }
 
-.features .features-title{
+.features-title{
   color: var(--title-text-color);
   font-size: 14px;
   font-weight: 700px;
@@ -86,13 +80,8 @@ body{
   text-transform: uppercase;
 }
 
-.section{
+.workspace{
   color: var(--title-text-color);
-  margin: 0 auto;
-  width: 366px;
-  height: 42px;
-  left: 617px;
-  top: 966px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17px;
@@ -109,7 +98,6 @@ body{
 
 .profession{
   color: var(--main-color);
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
 }
@@ -118,8 +106,6 @@ body{
   text-decoration: none;
   cursor: pointer;
 }
-
-
 
 .button.primary{
   color: var(--accent-color);
@@ -147,13 +133,9 @@ body{
   color: var(--accent-color);
   background-color: var(--nav-color);
 }
-.project:hover, .project:focus{
-  color: var(--accent-color);
-  background-color: var(--nav-color);
-}
+
 .name-title{
   color: var(--title-text-color);
-  font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
@@ -162,4 +144,14 @@ body{
   color: var(--main-color);
   font-size: 16px;
   line-height: 1.88;
+}
+.footer{
+  background-color: var(--title-text-color);
+}
+.logo-footer{
+  color: var(--accent-color);
+  font-family: "Raleway";
+  font-size: 26px;
+  line-height: 1.19;
+  text-decoration: none;
 }
