--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,9 @@ body{
 }
 .list {
   list-style: none;
+  text-decoration: none;
 }
+
 .logo-link:hover, .logo-link:focus{
   color: var(--accent-color);
 }
@@ -33,9 +35,9 @@ body{
 .logo-header{
   color: var(--title-text-color);
   font-family: "Raleway";
-  font-size: 26px;
+  /* font-size: 26px;
   line-height: 1.19;
-  text-decoration: none;
+  text-decoration: none; */
 }
 .site-nav .link {
   color: var(--title-text-color);
@@ -82,7 +84,7 @@ body{
 
 .workspace{
   color: var(--title-text-color);
-  font-weight: 700;
+  /* font-weight: 700; */
   font-size: 36px;
   line-height: 1.17px;
   text-align: center;
@@ -139,11 +141,13 @@ body{
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+
 }
 .work{
   color: var(--main-color);
   font-size: 16px;
   line-height: 1.88;
+
 }
 .footer{
   background-color: var(--title-text-color);
